[project]
name = "sequential-thinking"
version = "0.2.0"
description = "A Sequential Thinking MCP Server for advanced problem solving"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "ai", "problem-solving"]
authors = [
   { name = "Arben Ademi", email = "arben.ademi@tuta.io" }
]
dependencies = [
   "mcp[cli]>=1.2.0",
   "rich>=13.7.0",
]

[project.scripts]
mcp-sequential-thinking = "mcp_sequential_thinking.server:main"

[project.urls]
Source = "https://github.com/arben-adm/sequential-thinking"

[tool.hatch.build.targets.wheel]
packages = ["mcp_sequential_thinking"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"